--- a/index.html
+++ b/index.html
@@ -1,16 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banana talk</title>
-    
+
+    <link rel="stylesheet" href="/style.css">
+
+    <style>
+        textarea {
+
+            width: 80%;
+            display: block;
+            margin: 1rem;
+            padding: 1rem;
+            height: 10vh;
+
+        }
+
+        #output {
+            border: 1px solid black;
+            width: 80%;
+            display: block;
+            margin: 1rem;
+            padding: 1rem;
+            height: 10vh;
+
+        }
+
+
+    </style>
+
 </head>
+
 <body>
+
+    <nav>
+    <div class = "header" style="text-align: center; font-size: xx-large;"  >
+        📖 The Shakespearn Talk 🧠
+    </div>
+</nav>
+ 
+<main>
+    <textarea id="txt-input" placeholder="put your sentance in english, we will convert it into Old English"></textarea>
+
+    <button id="btn-translate">Translate</button>
+
     
-    <h1>
-        This is banana talk
-    </h1>
+
+    <div style="font-size: x-large; color: white;">Output will be shown here 👇 </div>
+
+    <div id="output"></div>
+
+</main>
+
+<footer>
+    <div style="font-size: 2rem;">About</div>
+    <p>Are you an shakespear fan, wasn't the way of speaking beaytiful back then , words had beauty
+        and poetry in them , This translator helps you feel the beauty of olden days English.</p>
+</footer>
+
+    <script src="app.js" type="text/javascript"></script>
 </body>
+
 </html>
