--- a/index.html
+++ b/index.html
@@ -9,36 +9,13 @@
 
     <link rel="stylesheet" href="/style.css">
 
-    <style>
-        textarea {
-
-            width: 80%;
-            display: block;
-            margin: 1rem;
-            padding: 1rem;
-            height: 10vh;
-
-        }
-
-        #output {
-            border: 1px solid black;
-            width: 80%;
-            display: block;
-            margin: 1rem;
-            padding: 1rem;
-            height: 10vh;
-
-        }
-
-
-    </style>
 
 </head>
 
 <body>
 
     <nav>
-    <div class = "header" style="text-align: center; font-size: xx-large;"  >
+    <div>
         📖 The Shakespearn Talk 🧠
     </div>
 </nav>
