commit: Font changes

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 </main>
 
 <footer>
-    <div style="font-size: 2rem;">About</div>
-    <p>Are you an shakespear fan, wasn't the way of speaking beaytiful back then , words had beauty
+    <div style="font-size: 2.5rem;">About</div>
+    <p style="font-size: 1.25rem;">Are you an shakespear fan, wasn't the way English was spoken beautiful back then , words had beauty
         and poetry in them , This translator helps you feel the beauty of olden days English.</p>
 </footer>
 
